--- a/desafios/d012/estilo/style.css
+++ b/desafios/d012/estilo/style.css
@@ -67,14 +67,30 @@ section.normal {
 section.imagem {
     background-color: rgb(52, 51, 51);
     color: white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.477);
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 section.imagem > p {
     
     display: inline-block;
     padding: 5px;
-    background-color: rgba(0, 0, 0, 0.253);
+    background-color: rgba(0, 0, 0, 0.581);
+    text-shadow: 1px 1px 0px black;
 }
+
+section#img01 {
+    background-image: url('../imagens/background001.jpg');
+    background-position: right center;
+   
+}
+
+section#img02 {
+    background-image: url('../imagens/background002.jpg');
+   
+}
+
 footer {
     background-color: black;
     color: white;
